# relay-lens

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  pyproject.toml  test.py  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: sync-to-hf.yml
server/: __init__.py  app.py  file_manager.py  routes_files.py  routes_viz.py  viz.py
server/batch/: __init__.py  rgb_batch_render.py
src/: App.vue  main.ts
src/api/: client.ts
src/components/: ChannelsTab.vue  FileTree.vue  FileUploader.vue  GithubLink.vue  MagnifiedTab.vue  MainPanel.vue  MeasurementTab.vue  MetricsTab.vue  RgbTab.vue  SceneGrid.vue  SidebarPanel.vue  SpectralDensityTab.vue  VizToolbar.vue
src/stores/: fileStore.ts  vizStore.ts
src/styles/: _variables.scss  global.scss  theme.scss
src/utils/: sessionId.ts
tests/: test_batch_rendering.py
