[project]
name = "relay-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "hsi-utils",
    "python-multipart>=0.0.26",
    "uvicorn>=0.43.0",
]

[tool.uv.workspace]
members = ["hsi-utils"]

[tool.uv.sources]
hsi-utils = { workspace = true }

[dependency-groups]
dev = [
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.uv]
config-settings-package = { "hsi-utils" = { editable_mode = "compat" } }

[tool.ty.environment]
python = ".venv"
root = ["./server"]